<resources>
    <string name="app_name">Mood Booster</string>
    <string name="profile">My Profile</string>
    <string name="questionnaire">Questionnaire</string>
    <string name="health">My Health</string>
    <string name="motivation">Motivation</string>
    <string name="chat">Chat</string>
    <string name="register">Register</string>
    <string name="aboutUs">About Us</string>
    <string name="motivationDesrip">Motivation secton for you to become inspired and boost your mood.</string>
    <string name="chatDesrip">Chat that enables you to chat with professionals.</string>
    <string name="aboutUsDescrip">About us page that shows information about us and our goals.</string>
    <string name="myHealthDescrip">See your about usage and statistics here.</string>
    <string name="questinnaireDescrip">Daily questionnaire that records how your feeling.</string>
    <string name="profileDescip">Your profile. Has your information and what you want people to see.</string>
    <string name="aboutText">This company was founded by Connor Hausmann, Sarah Jiwani, Cooper Hauck, and Joshua John
        . It was founded September 2019. The goal from the very beginning was to boost peoples moods.
    With mental health being a growing concern, we sought out to make an app that could possibly help. Enjoy!</string>
    <string name="type_here">Type here...</string>
    <string name="send">Send</string>
    <string name="chat_message_will_appear_here">Chat Message will appear here ...</string>
    <string name="ReceivingUser">Anonymous Feelings Form</string>
    <string name="quizDirections">Please choose the answer that best describes how you feel about this statement TODAY.</string>
    <string name="sampleQuestion">Which thing is alive?</string>
    <string name="sampleOption1">answer1</string>
    <string name="sampleOption2">answer2</string>
    <string name="sampleOption3">answer3</string>
    <string name="sampleOption4">answer4</string>
    <string name="sampleOption5">answer5</string>
    <string name="quitOption">quit</string>
    <string name="disclaimer">Disclaimer: MoodBooster is intended solely for personal use to monitor and potentially identify fluctuations
        in mood and is not designed to constitute advice as to your mental health or to provide a diagnosis. An accurate diagnosis
        for mood disorders and other psychiatric disorders can only be made by a physician or other qualified mental health
        professional after a complete evaluation, including a physical exam, to rule out any other illnesses or conditions that may
        be the cause of the symptoms. By using features of this application, you agree not to hold MoodBooster creators liable,
        or make any claims or claim damages of any kind whatsoever, including claims or damages arising out of a decision or action
        that might be related to the information contained on this application. Such damages include, without limitation, direct,
        indirect, special, general, incidental or consequential damages. Further, you agree to indemnify and hold harmless the
        application partners, sponsors, their staff or consultants for any claims or damages arising out of your use of this application,
        whether you commence such claims or otherwise.</string>
    <string name="quoteList">Tough times don’t last. Tough people do. \n– Robert H. Schuller \n\n
    Keep going. Everything you need will come to you at the perfect time. \n\n
    You have to be at your strongest when you’re feeling at your weakest. \n\n
    Never give up. Great things take time. Be patient. \n\n
    It does not matter how slowly you go as long as you do not stop. \n– Confucius \n\n
    Courage is one step ahead of fear. \n– Coleman Young \n\n
    Pain is temporary. Quitting lasts forever. \n– Lance Armstrong \n\n
    It’s not about perfect. It’s about effort. \n– Jillian Michaels \n\n
    Challenges are what make life interesting. Overcoming them is what makes them meaningful. \n\n
    Blessed are those who can give without remembering and take without forgetting. \n--Anonymous \n\n
    Innovation distinguishes between a leader and a follower. \n- Steve Jobs \n\n
    Stop being afraid of what could go wrong and think of what could go right. \n\n
    You should never regret anything in life. If it’s good, it’s wonderful. If it’s bad, it is experience. \n\n
    If you have the power to make someone happy, do it. The world needs more of that. \n\n
    Don’t be afraid to give up the good and go for great. \n\n
    Don’t talk, just act. Don’t say, just show. Don’t promise, just prove.\n\n
    Discipline is doing what needs to be done, even if you don’t want to. \n\n
    Work while they sleep. Learn while they party. Save while they spend. Live like they dream. \n\n</string>

    <string name="scale">Taking a look at what your score means:\n\n10 - 20: Green zone\t\t\tIn the clear!\n21 - 30: Yellow zone\t\tThings are looking good!\n31 - 40: Orange zone\t\tThings could be better!\n41 - 50: Red zone\t\t\t\tSeek help </string>
    <string name="OutsideResources">If you need extra assistance, please use the resources below: \n\n
    National Suicide Hotline\n\t(800)273-TALK(8255)\n\n
    Crisis Hotline\n\t Text NAMI to 741-741\n\n
    National Aliance for Mental Health\n\tnami.org\n\n
    Addictions\n\taddictioncenter.com\n\n
    Remember to talk to friend and loved ones if you feel like they too are feeling under the weather as everyone has their low points.</string>
</resources>
