<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Chat">

    <TextView
        android:id="@+id/Text"
        android:layout_width="413dp"
        android:layout_height="591dp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="5dp"
        android:gravity="bottom"
        android:hint="@string/chat_message_will_appear_here"
        android:textAlignment="gravity"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ReceivingUser" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:hint="@string/type_here"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Sendbutton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Text" />

    <Button
        android:id="@+id/Sendbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="5dp"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/Text" />

    <TextView
        android:id="@+id/ReceivingUser"
        android:layout_width="415dp"
        android:layout_height="46dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="3dp"
        android:background="#171799"
        android:hint="@string/ReceivingUser"
        android:text="@string/ReceivingUser"
        android:textColor="#E9EDF0"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>